# pointcloud_divider

./: .clang-format  CMakeLists.txt  LICENSE  README.md  package.xml
config/: default.yaml
include/pointcloud_divider/: pointcloud_divider.hpp
scripts/: divider_core.sh  pointcloud_divider.sh
src/: pointcloud_divider.cpp  pointcloud_divider_core.cpp  pointcloud_divider_node.cpp
