<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_divider</name>
  <version>0.0.0</version>
  <description>The pointcloud divider package</description>
  <maintainer email="tomoya.sato@map4.jp">Tomoya-Sato</maintainer>
  <license>BSD-3-Clauses</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
  </export>
</package>