<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_divider</name>
  <version>0.0.0</version>
  <description>The pointcloud divider package</description>
  <maintainer email="tomoya.sato@map4.jp">Tomoya-Sato</maintainer>
  <license>BSD-3-Clauses</license>
  <build_depend>ament_cmake</build_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <build_depend>yaml-cpp</build_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <export>
  </export>
</package>